P5_optativo/Lex_y_Yacc/y.output
Estado 156 conflictos: 1 desplazamiento/reducción


Gramática

    0 $accept: Programa $end

    1 $@1: %empty

    2 Programa: Cabecera_programa $@1 bloque

    3 $@2: %empty

    4 $@3: %empty

    5 bloque: Inicio_de_bloque $@2 Declar_de_variables_locales $@3 Declar_subprogs Sentencias Fin_de_bloque

    6 Declar_subprogs: Declar_subprogs Declar_subprog
    7                | %empty

    8 $@4: %empty

    9 Declar_subprog: Cabecera_subprog $@4 bloque

   10 Declar_de_variables_locales: Marca_ini_declar_variables Variables_locales Marca_fin_declar_variables
   11                            | %empty

   12 Marca_ini_declar_variables: INIDEC

   13 Marca_fin_declar_variables: FINDEC

   14 Cabecera_programa: MAIN

   15 Inicio_de_bloque: LLAIZQ

   16 Fin_de_bloque: LLADER

   17 Variables_locales: Variables_locales Cuerpo_declar_variables
   18                  | Cuerpo_declar_variables

   19 $@5: %empty

   20 Cuerpo_declar_variables: tipo $@5 lista_declaracion_variables PYC
   21                        | error

   22 Cabecera_subprog: tipo variable PARIZQ argumentos PARDER
   23                 | tipo variable PARIZQ PARDER

   24 $@6: %empty

   25 argumentos: tipo $@6 variable

   26 $@7: %empty

   27 argumentos: argumentos COMA tipo $@7 variable
   28           | error

   29 variable: identificador
   30         | elemento_de_array_decl

   31 elemento_de_array_decl: identificador CORIZQ CONSTENT CORDER
   32                       | identificador CORIZQ CONSTENT COMA CONSTENT CORDER

   33 variable_expresion: identificador
   34                   | elemento_de_array

   35 elemento_de_array: identificador CORIZQ expresion CORDER
   36                  | identificador CORIZQ expresion COMA expresion CORDER

   37 Sentencias: Sentencias Sentencia
   38           | Sentencia

   39 Sentencia: bloque
   40          | sentencia_asignacion
   41          | sentencia_si
   42          | sentencia_mientras
   43          | sentencia_hacer_hasta
   44          | sentencia_entrada
   45          | sentencia_salida
   46          | sentencia_retornar

   47 sentencia_asignacion: variable_expresion ASIG expresion PYC
   48                     | error

   49 sentencia_si: SI PARIZQ expresion PARDER Sentencia
   50             | SI PARIZQ expresion PARDER Sentencia SINO Sentencia

   51 sentencia_mientras: MIENTRAS PARIZQ expresion PARDER Sentencia

   52 sentencia_hacer_hasta: HACER Sentencia HASTA PARIZQ expresion PARDER PYC

   53 sentencia_entrada: ENTRADA lista_variables PYC

   54 sentencia_salida: SALIDA lista_expresiones_cadena PYC

   55 sentencia_retornar: DEVOLVER expresion PYC

   56 lista_expresiones_cadena: lista_expresiones_cadena COMA expresion_cadena
   57                         | expresion_cadena

   58 expresion_cadena: expresion
   59                 | cadena

   60 lista_variables: variable
   61                | lista_variables COMA variable

   62 lista_declaracion_variables: variable
   63                            | lista_declaracion_variables COMA variable
   64                            | error

   65 lista_expresiones: expresion
   66                  | lista_expresiones COMA expresion

   67 expresion: PARIZQ expresion PARDER
   68          | OPNEG expresion
   69          | OPSUMA expresion
   70          | OPRESTA expresion
   71          | expresion OPMULT expresion
   72          | expresion OPDIV expresion
   73          | expresion OPMULTM expresion
   74          | expresion OPAND expresion
   75          | expresion OPOR expresion
   76          | expresion OPEQ expresion
   77          | expresion OPNEQ expresion
   78          | expresion OPLEQ expresion
   79          | expresion OPGEQ expresion
   80          | expresion OPLESS expresion
   81          | expresion OPGR expresion
   82          | expresion OPMOD expresion
   83          | expresion OPSUMA expresion
   84          | expresion OPRESTA expresion
   85          | variable_expresion
   86          | constante
   87          | funcion
   88          | error

   89 funcion: identificador PARIZQ PARDER

   90 $@8: %empty

   91 funcion: identificador PARIZQ $@8 lista_expresiones PARDER

   92 tipo: TIPOEL

   93 cadena: CADENA

   94 identificador: IDEN

   95 constante: CONST
   96          | CONSTENT
   97          | CORIZQ ini_elementos_array CORDER

   98 ini_elementos_array: ini_elementos_array PYC lista_expresiones_array
   99                    | lista_expresiones_array

  100 lista_expresiones_array: expresion
  101                        | lista_expresiones_array COMA expresion


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256) 21 28 48 64 88
    OPOR (258) 75
    OPAND (259) 74
    OPEQ (260) 76
    OPNEQ (261) 77
    OPLEQ (262) 78
    OPGEQ (263) 79
    OPLESS (264) 80
    OPGR (265) 81
    OPSUMA (266) 69 83
    OPRESTA (267) 70 84
    OPMULT (268) 71
    OPMULTM (269) 73
    OPDIV (270) 72
    OPMOD (271) 82
    OPNEG (272) 68
    CONST (273) 95
    CONSTENT (274) 31 32 96
    IDEN (275) 94
    CADENA (276) 93
    ASIG (277) 47
    CORIZQ (278) 31 32 35 36 97
    CORDER (279) 31 32 35 36 97
    PARIZQ (280) 22 23 49 50 51 52 67 89 91
    PARDER (281) 22 23 49 50 51 52 67 89 91
    LLAIZQ (282) 15
    LLADER (283) 16
    PYC (284) 20 47 52 53 54 55 98
    COMA (285) 27 32 36 56 61 63 66 101
    SI (286) 49 50
    SINO (287) 50
    MIENTRAS (288) 51
    HACER (289) 52
    HASTA (290) 52
    INIDEC (291) 12
    FINDEC (292) 13
    SALIDA (293) 54
    ENTRADA (294) 53
    DEVOLVER (295) 55
    MAIN (296) 14
    TIPOEL (297) 92


No terminales con las reglas donde aparecen

    $accept (43)
        on left: 0
    Programa (44)
        on left: 2
        on right: 0
    $@1 (45)
        on left: 1
        on right: 2
    bloque (46)
        on left: 5
        on right: 2 9 39
    $@2 (47)
        on left: 3
        on right: 5
    $@3 (48)
        on left: 4
        on right: 5
    Declar_subprogs (49)
        on left: 6 7
        on right: 5 6
    Declar_subprog (50)
        on left: 9
        on right: 6
    $@4 (51)
        on left: 8
        on right: 9
    Declar_de_variables_locales (52)
        on left: 10 11
        on right: 5
    Marca_ini_declar_variables (53)
        on left: 12
        on right: 10
    Marca_fin_declar_variables (54)
        on left: 13
        on right: 10
    Cabecera_programa (55)
        on left: 14
        on right: 2
    Inicio_de_bloque (56)
        on left: 15
        on right: 5
    Fin_de_bloque (57)
        on left: 16
        on right: 5
    Variables_locales (58)
        on left: 17 18
        on right: 10 17
    Cuerpo_declar_variables (59)
        on left: 20 21
        on right: 17 18
    $@5 (60)
        on left: 19
        on right: 20
    Cabecera_subprog (61)
        on left: 22 23
        on right: 9
    argumentos (62)
        on left: 25 27 28
        on right: 22 27
    $@6 (63)
        on left: 24
        on right: 25
    $@7 (64)
        on left: 26
        on right: 27
    variable (65)
        on left: 29 30
        on right: 22 23 25 27 60 61 62 63
    elemento_de_array_decl (66)
        on left: 31 32
        on right: 30
    variable_expresion (67)
        on left: 33 34
        on right: 47 85
    elemento_de_array (68)
        on left: 35 36
        on right: 34
    Sentencias (69)
        on left: 37 38
        on right: 5 37
    Sentencia (70)
        on left: 39 40 41 42 43 44 45 46
        on right: 37 38 49 50 51 52
    sentencia_asignacion (71)
        on left: 47 48
        on right: 40
    sentencia_si (72)
        on left: 49 50
        on right: 41
    sentencia_mientras (73)
        on left: 51
        on right: 42
    sentencia_hacer_hasta (74)
        on left: 52
        on right: 43
    sentencia_entrada (75)
        on left: 53
        on right: 44
    sentencia_salida (76)
        on left: 54
        on right: 45
    sentencia_retornar (77)
        on left: 55
        on right: 46
    lista_expresiones_cadena (78)
        on left: 56 57
        on right: 54 56
    expresion_cadena (79)
        on left: 58 59
        on right: 56 57
    lista_variables (80)
        on left: 60 61
        on right: 53 61
    lista_declaracion_variables (81)
        on left: 62 63 64
        on right: 20 63
    lista_expresiones (82)
        on left: 65 66
        on right: 66 91
    expresion (83)
        on left: 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88
        on right: 35 36 47 49 50 51 52 55 58 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 100 101
    funcion (84)
        on left: 89 91
        on right: 87
    $@8 (85)
        on left: 90
        on right: 91
    tipo (86)
        on left: 92
        on right: 20 22 23 25 27
    cadena (87)
        on left: 93
        on right: 59
    identificador (88)
        on left: 94
        on right: 29 31 32 33 35 36 89 91
    constante (89)
        on left: 95 96 97
        on right: 86
    ini_elementos_array (90)
        on left: 98 99
        on right: 97 98
    lista_expresiones_array (91)
        on left: 100 101
        on right: 98 99 101


Estado 0

    0 $accept: . Programa $end

    MAIN  desplazar e ir al estado 1

    Programa           ir al estado 2
    Cabecera_programa  ir al estado 3


Estado 1

   14 Cabecera_programa: MAIN .

    $default  reduce usando la regla 14 (Cabecera_programa)


Estado 2

    0 $accept: Programa . $end

    $end  desplazar e ir al estado 4


Estado 3

    2 Programa: Cabecera_programa . $@1 bloque

    $default  reduce usando la regla 1 ($@1)

    $@1  ir al estado 5


Estado 4

    0 $accept: Programa $end .

    $default  aceptar


Estado 5

    2 Programa: Cabecera_programa $@1 . bloque

    LLAIZQ  desplazar e ir al estado 6

    bloque            ir al estado 7
    Inicio_de_bloque  ir al estado 8


Estado 6

   15 Inicio_de_bloque: LLAIZQ .

    $default  reduce usando la regla 15 (Inicio_de_bloque)


Estado 7

    2 Programa: Cabecera_programa $@1 bloque .

    $default  reduce usando la regla 2 (Programa)


Estado 8

    5 bloque: Inicio_de_bloque . $@2 Declar_de_variables_locales $@3 Declar_subprogs Sentencias Fin_de_bloque

    $default  reduce usando la regla 3 ($@2)

    $@2  ir al estado 9


Estado 9

    5 bloque: Inicio_de_bloque $@2 . Declar_de_variables_locales $@3 Declar_subprogs Sentencias Fin_de_bloque

    INIDEC  desplazar e ir al estado 10

    $default  reduce usando la regla 11 (Declar_de_variables_locales)

    Declar_de_variables_locales  ir al estado 11
    Marca_ini_declar_variables   ir al estado 12


Estado 10

   12 Marca_ini_declar_variables: INIDEC .

    $default  reduce usando la regla 12 (Marca_ini_declar_variables)


Estado 11

    5 bloque: Inicio_de_bloque $@2 Declar_de_variables_locales . $@3 Declar_subprogs Sentencias Fin_de_bloque

    $default  reduce usando la regla 4 ($@3)

    $@3  ir al estado 13


Estado 12

   10 Declar_de_variables_locales: Marca_ini_declar_variables . Variables_locales Marca_fin_declar_variables

    error   desplazar e ir al estado 14
    TIPOEL  desplazar e ir al estado 15

    Variables_locales        ir al estado 16
    Cuerpo_declar_variables  ir al estado 17
    tipo                     ir al estado 18


Estado 13

    5 bloque: Inicio_de_bloque $@2 Declar_de_variables_locales $@3 . Declar_subprogs Sentencias Fin_de_bloque

    $default  reduce usando la regla 7 (Declar_subprogs)

    Declar_subprogs  ir al estado 19


Estado 14

   21 Cuerpo_declar_variables: error .

    $default  reduce usando la regla 21 (Cuerpo_declar_variables)


Estado 15

   92 tipo: TIPOEL .

    $default  reduce usando la regla 92 (tipo)


Estado 16

   10 Declar_de_variables_locales: Marca_ini_declar_variables Variables_locales . Marca_fin_declar_variables
   17 Variables_locales: Variables_locales . Cuerpo_declar_variables

    error   desplazar e ir al estado 14
    FINDEC  desplazar e ir al estado 20
    TIPOEL  desplazar e ir al estado 15

    Marca_fin_declar_variables  ir al estado 21
    Cuerpo_declar_variables     ir al estado 22
    tipo                        ir al estado 18


Estado 17

   18 Variables_locales: Cuerpo_declar_variables .

    $default  reduce usando la regla 18 (Variables_locales)


Estado 18

   20 Cuerpo_declar_variables: tipo . $@5 lista_declaracion_variables PYC

    $default  reduce usando la regla 19 ($@5)

    $@5  ir al estado 23


Estado 19

    5 bloque: Inicio_de_bloque $@2 Declar_de_variables_locales $@3 Declar_subprogs . Sentencias Fin_de_bloque
    6 Declar_subprogs: Declar_subprogs . Declar_subprog

    error     desplazar e ir al estado 24
    IDEN      desplazar e ir al estado 25
    LLAIZQ    desplazar e ir al estado 6
    SI        desplazar e ir al estado 26
    MIENTRAS  desplazar e ir al estado 27
    HACER     desplazar e ir al estado 28
    SALIDA    desplazar e ir al estado 29
    ENTRADA   desplazar e ir al estado 30
    DEVOLVER  desplazar e ir al estado 31
    TIPOEL    desplazar e ir al estado 15

    bloque                 ir al estado 32
    Declar_subprog         ir al estado 33
    Inicio_de_bloque       ir al estado 8
    Cabecera_subprog       ir al estado 34
    variable_expresion     ir al estado 35
    elemento_de_array      ir al estado 36
    Sentencias             ir al estado 37
    Sentencia              ir al estado 38
    sentencia_asignacion   ir al estado 39
    sentencia_si           ir al estado 40
    sentencia_mientras     ir al estado 41
    sentencia_hacer_hasta  ir al estado 42
    sentencia_entrada      ir al estado 43
    sentencia_salida       ir al estado 44
    sentencia_retornar     ir al estado 45
    tipo                   ir al estado 46
    identificador          ir al estado 47


Estado 20

   13 Marca_fin_declar_variables: FINDEC .

    $default  reduce usando la regla 13 (Marca_fin_declar_variables)


Estado 21

   10 Declar_de_variables_locales: Marca_ini_declar_variables Variables_locales Marca_fin_declar_variables .

    $default  reduce usando la regla 10 (Declar_de_variables_locales)


Estado 22

   17 Variables_locales: Variables_locales Cuerpo_declar_variables .

    $default  reduce usando la regla 17 (Variables_locales)


Estado 23

   20 Cuerpo_declar_variables: tipo $@5 . lista_declaracion_variables PYC

    error  desplazar e ir al estado 48
    IDEN   desplazar e ir al estado 25

    variable                     ir al estado 49
    elemento_de_array_decl       ir al estado 50
    lista_declaracion_variables  ir al estado 51
    identificador                ir al estado 52


Estado 24

   48 sentencia_asignacion: error .

    $default  reduce usando la regla 48 (sentencia_asignacion)


Estado 25

   94 identificador: IDEN .

    $default  reduce usando la regla 94 (identificador)


Estado 26

   49 sentencia_si: SI . PARIZQ expresion PARDER Sentencia
   50             | SI . PARIZQ expresion PARDER Sentencia SINO Sentencia

    PARIZQ  desplazar e ir al estado 53


Estado 27

   51 sentencia_mientras: MIENTRAS . PARIZQ expresion PARDER Sentencia

    PARIZQ  desplazar e ir al estado 54


Estado 28

   52 sentencia_hacer_hasta: HACER . Sentencia HASTA PARIZQ expresion PARDER PYC

    error     desplazar e ir al estado 24
    IDEN      desplazar e ir al estado 25
    LLAIZQ    desplazar e ir al estado 6
    SI        desplazar e ir al estado 26
    MIENTRAS  desplazar e ir al estado 27
    HACER     desplazar e ir al estado 28
    SALIDA    desplazar e ir al estado 29
    ENTRADA   desplazar e ir al estado 30
    DEVOLVER  desplazar e ir al estado 31

    bloque                 ir al estado 32
    Inicio_de_bloque       ir al estado 8
    variable_expresion     ir al estado 35
    elemento_de_array      ir al estado 36
    Sentencia              ir al estado 55
    sentencia_asignacion   ir al estado 39
    sentencia_si           ir al estado 40
    sentencia_mientras     ir al estado 41
    sentencia_hacer_hasta  ir al estado 42
    sentencia_entrada      ir al estado 43
    sentencia_salida       ir al estado 44
    sentencia_retornar     ir al estado 45
    identificador          ir al estado 47


Estado 29

   54 sentencia_salida: SALIDA . lista_expresiones_cadena PYC

    error     desplazar e ir al estado 56
    OPSUMA    desplazar e ir al estado 57
    OPRESTA   desplazar e ir al estado 58
    OPNEG     desplazar e ir al estado 59
    CONST     desplazar e ir al estado 60
    CONSTENT  desplazar e ir al estado 61
    IDEN      desplazar e ir al estado 25
    CADENA    desplazar e ir al estado 62
    CORIZQ    desplazar e ir al estado 63
    PARIZQ    desplazar e ir al estado 64

    variable_expresion        ir al estado 65
    elemento_de_array         ir al estado 36
    lista_expresiones_cadena  ir al estado 66
    expresion_cadena          ir al estado 67
    expresion                 ir al estado 68
    funcion                   ir al estado 69
    cadena                    ir al estado 70
    identificador             ir al estado 71
    constante                 ir al estado 72


Estado 30

   53 sentencia_entrada: ENTRADA . lista_variables PYC

    IDEN  desplazar e ir al estado 25

    variable                ir al estado 73
    elemento_de_array_decl  ir al estado 50
    lista_variables         ir al estado 74
    identificador           ir al estado 52


Estado 31

   55 sentencia_retornar: DEVOLVER . expresion PYC

    error     desplazar e ir al estado 56
    OPSUMA    desplazar e ir al estado 57
    OPRESTA   desplazar e ir al estado 58
    OPNEG     desplazar e ir al estado 59
    CONST     desplazar e ir al estado 60
    CONSTENT  desplazar e ir al estado 61
    IDEN      desplazar e ir al estado 25
    CORIZQ    desplazar e ir al estado 63
    PARIZQ    desplazar e ir al estado 64

    variable_expresion  ir al estado 65
    elemento_de_array   ir al estado 36
    expresion           ir al estado 75
    funcion             ir al estado 69
    identificador       ir al estado 71
    constante           ir al estado 72


Estado 32

   39 Sentencia: bloque .

    $default  reduce usando la regla 39 (Sentencia)


Estado 33

    6 Declar_subprogs: Declar_subprogs Declar_subprog .

    $default  reduce usando la regla 6 (Declar_subprogs)


Estado 34

    9 Declar_subprog: Cabecera_subprog . $@4 bloque

    $default  reduce usando la regla 8 ($@4)

    $@4  ir al estado 76


Estado 35

   47 sentencia_asignacion: variable_expresion . ASIG expresion PYC

    ASIG  desplazar e ir al estado 77


Estado 36

   34 variable_expresion: elemento_de_array .

    $default  reduce usando la regla 34 (variable_expresion)


Estado 37

    5 bloque: Inicio_de_bloque $@2 Declar_de_variables_locales $@3 Declar_subprogs Sentencias . Fin_de_bloque
   37 Sentencias: Sentencias . Sentencia

    error     desplazar e ir al estado 24
    IDEN      desplazar e ir al estado 25
    LLAIZQ    desplazar e ir al estado 6
    LLADER    desplazar e ir al estado 78
    SI        desplazar e ir al estado 26
    MIENTRAS  desplazar e ir al estado 27
    HACER     desplazar e ir al estado 28
    SALIDA    desplazar e ir al estado 29
    ENTRADA   desplazar e ir al estado 30
    DEVOLVER  desplazar e ir al estado 31

    bloque                 ir al estado 32
    Inicio_de_bloque       ir al estado 8
    Fin_de_bloque          ir al estado 79
    variable_expresion     ir al estado 35
    elemento_de_array      ir al estado 36
    Sentencia              ir al estado 80
    sentencia_asignacion   ir al estado 39
    sentencia_si           ir al estado 40
    sentencia_mientras     ir al estado 41
    sentencia_hacer_hasta  ir al estado 42
    sentencia_entrada      ir al estado 43
    sentencia_salida       ir al estado 44
    sentencia_retornar     ir al estado 45
    identificador          ir al estado 47


Estado 38

   38 Sentencias: Sentencia .

    $default  reduce usando la regla 38 (Sentencias)


Estado 39

   40 Sentencia: sentencia_asignacion .

    $default  reduce usando la regla 40 (Sentencia)


Estado 40

   41 Sentencia: sentencia_si .

    $default  reduce usando la regla 41 (Sentencia)


Estado 41

   42 Sentencia: sentencia_mientras .

    $default  reduce usando la regla 42 (Sentencia)


Estado 42

   43 Sentencia: sentencia_hacer_hasta .

    $default  reduce usando la regla 43 (Sentencia)


Estado 43

   44 Sentencia: sentencia_entrada .

    $default  reduce usando la regla 44 (Sentencia)


Estado 44

   45 Sentencia: sentencia_salida .

    $default  reduce usando la regla 45 (Sentencia)


Estado 45

   46 Sentencia: sentencia_retornar .

    $default  reduce usando la regla 46 (Sentencia)


Estado 46

   22 Cabecera_subprog: tipo . variable PARIZQ argumentos PARDER
   23                 | tipo . variable PARIZQ PARDER

    IDEN  desplazar e ir al estado 25

    variable                ir al estado 81
    elemento_de_array_decl  ir al estado 50
    identificador           ir al estado 52


Estado 47

   33 variable_expresion: identificador .
   35 elemento_de_array: identificador . CORIZQ expresion CORDER
   36                  | identificador . CORIZQ expresion COMA expresion CORDER

    CORIZQ  desplazar e ir al estado 82

    $default  reduce usando la regla 33 (variable_expresion)


Estado 48

   64 lista_declaracion_variables: error .

    $default  reduce usando la regla 64 (lista_declaracion_variables)


Estado 49

   62 lista_declaracion_variables: variable .

    $default  reduce usando la regla 62 (lista_declaracion_variables)


Estado 50

   30 variable: elemento_de_array_decl .

    $default  reduce usando la regla 30 (variable)


Estado 51

   20 Cuerpo_declar_variables: tipo $@5 lista_declaracion_variables . PYC
   63 lista_declaracion_variables: lista_declaracion_variables . COMA variable

    PYC   desplazar e ir al estado 83
    COMA  desplazar e ir al estado 84


Estado 52

   29 variable: identificador .
   31 elemento_de_array_decl: identificador . CORIZQ CONSTENT CORDER
   32                       | identificador . CORIZQ CONSTENT COMA CONSTENT CORDER

    CORIZQ  desplazar e ir al estado 85

    $default  reduce usando la regla 29 (variable)


Estado 53

   49 sentencia_si: SI PARIZQ . expresion PARDER Sentencia
   50             | SI PARIZQ . expresion PARDER Sentencia SINO Sentencia

    error     desplazar e ir al estado 56
    OPSUMA    desplazar e ir al estado 57
    OPRESTA   desplazar e ir al estado 58
    OPNEG     desplazar e ir al estado 59
    CONST     desplazar e ir al estado 60
    CONSTENT  desplazar e ir al estado 61
    IDEN      desplazar e ir al estado 25
    CORIZQ    desplazar e ir al estado 63
    PARIZQ    desplazar e ir al estado 64

    variable_expresion  ir al estado 65
    elemento_de_array   ir al estado 36
    expresion           ir al estado 86
    funcion             ir al estado 69
    identificador       ir al estado 71
    constante           ir al estado 72


Estado 54

   51 sentencia_mientras: MIENTRAS PARIZQ . expresion PARDER Sentencia

    error     desplazar e ir al estado 56
    OPSUMA    desplazar e ir al estado 57
    OPRESTA   desplazar e ir al estado 58
    OPNEG     desplazar e ir al estado 59
    CONST     desplazar e ir al estado 60
    CONSTENT  desplazar e ir al estado 61
    IDEN      desplazar e ir al estado 25
    CORIZQ    desplazar e ir al estado 63
    PARIZQ    desplazar e ir al estado 64

    variable_expresion  ir al estado 65
    elemento_de_array   ir al estado 36
    expresion           ir al estado 87
    funcion             ir al estado 69
    identificador       ir al estado 71
    constante           ir al estado 72


Estado 55

   52 sentencia_hacer_hasta: HACER Sentencia . HASTA PARIZQ expresion PARDER PYC

    HASTA  desplazar e ir al estado 88


Estado 56

   88 expresion: error .

    $default  reduce usando la regla 88 (expresion)


Estado 57

   69 expresion: OPSUMA . expresion

    error     desplazar e ir al estado 56
    OPSUMA    desplazar e ir al estado 57
    OPRESTA   desplazar e ir al estado 58
    OPNEG     desplazar e ir al estado 59
    CONST     desplazar e ir al estado 60
    CONSTENT  desplazar e ir al estado 61
    IDEN      desplazar e ir al estado 25
    CORIZQ    desplazar e ir al estado 63
    PARIZQ    desplazar e ir al estado 64

    variable_expresion  ir al estado 65
    elemento_de_array   ir al estado 36
    expresion           ir al estado 89
    funcion             ir al estado 69
    identificador       ir al estado 71
    constante           ir al estado 72


Estado 58

   70 expresion: OPRESTA . expresion

    error     desplazar e ir al estado 56
    OPSUMA    desplazar e ir al estado 57
    OPRESTA   desplazar e ir al estado 58
    OPNEG     desplazar e ir al estado 59
    CONST     desplazar e ir al estado 60
    CONSTENT  desplazar e ir al estado 61
    IDEN      desplazar e ir al estado 25
    CORIZQ    desplazar e ir al estado 63
    PARIZQ    desplazar e ir al estado 64

    variable_expresion  ir al estado 65
    elemento_de_array   ir al estado 36
    expresion           ir al estado 90
    funcion             ir al estado 69
    identificador       ir al estado 71
    constante           ir al estado 72


Estado 59

   68 expresion: OPNEG . expresion

    error     desplazar e ir al estado 56
    OPSUMA    desplazar e ir al estado 57
    OPRESTA   desplazar e ir al estado 58
    OPNEG     desplazar e ir al estado 59
    CONST     desplazar e ir al estado 60
    CONSTENT  desplazar e ir al estado 61
    IDEN      desplazar e ir al estado 25
    CORIZQ    desplazar e ir al estado 63
    PARIZQ    desplazar e ir al estado 64

    variable_expresion  ir al estado 65
    elemento_de_array   ir al estado 36
    expresion           ir al estado 91
    funcion             ir al estado 69
    identificador       ir al estado 71
    constante           ir al estado 72


Estado 60

   95 constante: CONST .

    $default  reduce usando la regla 95 (constante)


Estado 61

   96 constante: CONSTENT .

    $default  reduce usando la regla 96 (constante)


Estado 62

   93 cadena: CADENA .

    $default  reduce usando la regla 93 (cadena)


Estado 63

   97 constante: CORIZQ . ini_elementos_array CORDER

    error     desplazar e ir al estado 56
    OPSUMA    desplazar e ir al estado 57
    OPRESTA   desplazar e ir al estado 58
    OPNEG     desplazar e ir al estado 59
    CONST     desplazar e ir al estado 60
    CONSTENT  desplazar e ir al estado 61
    IDEN      desplazar e ir al estado 25
    CORIZQ    desplazar e ir al estado 63
    PARIZQ    desplazar e ir al estado 64

    variable_expresion       ir al estado 65
    elemento_de_array        ir al estado 36
    expresion                ir al estado 92
    funcion                  ir al estado 69
    identificador            ir al estado 71
    constante                ir al estado 72
    ini_elementos_array      ir al estado 93
    lista_expresiones_array  ir al estado 94


Estado 64

   67 expresion: PARIZQ . expresion PARDER

    error     desplazar e ir al estado 56
    OPSUMA    desplazar e ir al estado 57
    OPRESTA   desplazar e ir al estado 58
    OPNEG     desplazar e ir al estado 59
    CONST     desplazar e ir al estado 60
    CONSTENT  desplazar e ir al estado 61
    IDEN      desplazar e ir al estado 25
    CORIZQ    desplazar e ir al estado 63
    PARIZQ    desplazar e ir al estado 64

    variable_expresion  ir al estado 65
    elemento_de_array   ir al estado 36
    expresion           ir al estado 95
    funcion             ir al estado 69
    identificador       ir al estado 71
    constante           ir al estado 72


Estado 65

   85 expresion: variable_expresion .

    $default  reduce usando la regla 85 (expresion)


Estado 66

   54 sentencia_salida: SALIDA lista_expresiones_cadena . PYC
   56 lista_expresiones_cadena: lista_expresiones_cadena . COMA expresion_cadena

    PYC   desplazar e ir al estado 96
    COMA  desplazar e ir al estado 97


Estado 67

   57 lista_expresiones_cadena: expresion_cadena .

    $default  reduce usando la regla 57 (lista_expresiones_cadena)


Estado 68

   58 expresion_cadena: expresion .
   71 expresion: expresion . OPMULT expresion
   72          | expresion . OPDIV expresion
   73          | expresion . OPMULTM expresion
   74          | expresion . OPAND expresion
   75          | expresion . OPOR expresion
   76          | expresion . OPEQ expresion
   77          | expresion . OPNEQ expresion
   78          | expresion . OPLEQ expresion
   79          | expresion . OPGEQ expresion
   80          | expresion . OPLESS expresion
   81          | expresion . OPGR expresion
   82          | expresion . OPMOD expresion
   83          | expresion . OPSUMA expresion
   84          | expresion . OPRESTA expresion

    OPOR     desplazar e ir al estado 98
    OPAND    desplazar e ir al estado 99
    OPEQ     desplazar e ir al estado 100
    OPNEQ    desplazar e ir al estado 101
    OPLEQ    desplazar e ir al estado 102
    OPGEQ    desplazar e ir al estado 103
    OPLESS   desplazar e ir al estado 104
    OPGR     desplazar e ir al estado 105
    OPSUMA   desplazar e ir al estado 106
    OPRESTA  desplazar e ir al estado 107
    OPMULT   desplazar e ir al estado 108
    OPMULTM  desplazar e ir al estado 109
    OPDIV    desplazar e ir al estado 110
    OPMOD    desplazar e ir al estado 111

    $default  reduce usando la regla 58 (expresion_cadena)


Estado 69

   87 expresion: funcion .

    $default  reduce usando la regla 87 (expresion)


Estado 70

   59 expresion_cadena: cadena .

    $default  reduce usando la regla 59 (expresion_cadena)


Estado 71

   33 variable_expresion: identificador .
   35 elemento_de_array: identificador . CORIZQ expresion CORDER
   36                  | identificador . CORIZQ expresion COMA expresion CORDER
   89 funcion: identificador . PARIZQ PARDER
   91        | identificador . PARIZQ $@8 lista_expresiones PARDER

    CORIZQ  desplazar e ir al estado 82
    PARIZQ  desplazar e ir al estado 112

    $default  reduce usando la regla 33 (variable_expresion)


Estado 72

   86 expresion: constante .

    $default  reduce usando la regla 86 (expresion)


Estado 73

   60 lista_variables: variable .

    $default  reduce usando la regla 60 (lista_variables)


Estado 74

   53 sentencia_entrada: ENTRADA lista_variables . PYC
   61 lista_variables: lista_variables . COMA variable

    PYC   desplazar e ir al estado 113
    COMA  desplazar e ir al estado 114


Estado 75

   55 sentencia_retornar: DEVOLVER expresion . PYC
   71 expresion: expresion . OPMULT expresion
   72          | expresion . OPDIV expresion
   73          | expresion . OPMULTM expresion
   74          | expresion . OPAND expresion
   75          | expresion . OPOR expresion
   76          | expresion . OPEQ expresion
   77          | expresion . OPNEQ expresion
   78          | expresion . OPLEQ expresion
   79          | expresion . OPGEQ expresion
   80          | expresion . OPLESS expresion
   81          | expresion . OPGR expresion
   82          | expresion . OPMOD expresion
   83          | expresion . OPSUMA expresion
   84          | expresion . OPRESTA expresion

    OPOR     desplazar e ir al estado 98
    OPAND    desplazar e ir al estado 99
    OPEQ     desplazar e ir al estado 100
    OPNEQ    desplazar e ir al estado 101
    OPLEQ    desplazar e ir al estado 102
    OPGEQ    desplazar e ir al estado 103
    OPLESS   desplazar e ir al estado 104
    OPGR     desplazar e ir al estado 105
    OPSUMA   desplazar e ir al estado 106
    OPRESTA  desplazar e ir al estado 107
    OPMULT   desplazar e ir al estado 108
    OPMULTM  desplazar e ir al estado 109
    OPDIV    desplazar e ir al estado 110
    OPMOD    desplazar e ir al estado 111
    PYC      desplazar e ir al estado 115


Estado 76

    9 Declar_subprog: Cabecera_subprog $@4 . bloque

    LLAIZQ  desplazar e ir al estado 6

    bloque            ir al estado 116
    Inicio_de_bloque  ir al estado 8


Estado 77

   47 sentencia_asignacion: variable_expresion ASIG . expresion PYC

    error     desplazar e ir al estado 56
    OPSUMA    desplazar e ir al estado 57
    OPRESTA   desplazar e ir al estado 58
    OPNEG     desplazar e ir al estado 59
    CONST     desplazar e ir al estado 60
    CONSTENT  desplazar e ir al estado 61
    IDEN      desplazar e ir al estado 25
    CORIZQ    desplazar e ir al estado 63
    PARIZQ    desplazar e ir al estado 64

    variable_expresion  ir al estado 65
    elemento_de_array   ir al estado 36
    expresion           ir al estado 117
    funcion             ir al estado 69
    identificador       ir al estado 71
    constante           ir al estado 72


Estado 78

   16 Fin_de_bloque: LLADER .

    $default  reduce usando la regla 16 (Fin_de_bloque)


Estado 79

    5 bloque: Inicio_de_bloque $@2 Declar_de_variables_locales $@3 Declar_subprogs Sentencias Fin_de_bloque .

    $default  reduce usando la regla 5 (bloque)


Estado 80

   37 Sentencias: Sentencias Sentencia .

    $default  reduce usando la regla 37 (Sentencias)


Estado 81

   22 Cabecera_subprog: tipo variable . PARIZQ argumentos PARDER
   23                 | tipo variable . PARIZQ PARDER

    PARIZQ  desplazar e ir al estado 118


Estado 82

   35 elemento_de_array: identificador CORIZQ . expresion CORDER
   36                  | identificador CORIZQ . expresion COMA expresion CORDER
